--- a/PG2/Entrega_oral_1/Entrega1_slides.Rmd
+++ b/PG2/Entrega_oral_1/Entrega1_slides.Rmd
@@ -253,7 +253,8 @@ cat("El quantil del 15% del salario de los programadores es de:", quantil)
 
 ```{r}
 cantidad <- sum(encuesta$JavaScript == TRUE & encuesta$Salary < quantil, na.rm = TRUE)
-cat("Probabilidad de trabajar en JS y ganar menos que el quantil", round(100*cantidad/nrow(encuesta),2), "%")
+cat("Probabilidad de trabajar en JS y ganar menos que el quantil", 
+    round(100*cantidad/nrow(encuesta),2), "%")
 ```
 
 -   Sufrir de ansiedad
@@ -261,7 +262,8 @@ cat("Probabilidad de trabajar en JS y ganar menos que el quantil", round(100*can
 ```{r}
 cantAnsiedad <- sum(encuesta$Ansiedad[encuesta$Ansiedad == TRUE])
 probabilidadAnsiedad <- cantAnsiedad/nrow(encuesta)
-cat("La probabilidad de que alguien sufra de ansiedad es: ", round(100*probabilidadAnsiedad,2), "%")
+cat("La probabilidad de que alguien sufra de ansiedad es: ",
+    round(100*probabilidadAnsiedad,2), "%")
 ```
 
 ------------------------------------------------------------------------
