--- a/PG2/Entrega_oral_1/Entrega1_slides.Rmd
+++ b/PG2/Entrega_oral_1/Entrega1_slides.Rmd
@@ -211,6 +211,8 @@ points(TabProb2$TotalMentalHealth,
 )
 ```
 
+Hay mayor probabilidad de que no sufra ningún problema de salud mental, pero existe la probabilidad de que sufra al menos 1 problema de salud mental
+
 ------------------------------------------------------------------------
 
 #### Función de masa de probabilidad acumulada
