--- a/PG2/Entrega_oral_1/Isa.qmd
+++ b/PG2/Entrega_oral_1/Isa.qmd
@@ -87,10 +87,22 @@ pruebita2
 ```
 
 ```{r}
+sum(encuesta$JavaScript == TRUE & encuesta$Salary < quantil & encuesta$Ansiedad == TRUE)/nrow(encuesta)
+```
+
+```{r}
+10.88/100*11.71/100
+```
+
+```{r}
 # Contar la cantidad de personas que trabajan en JavaScript y ganan menos que el quantil con ansiedad
 JS_Ansiedad <- sum((encuesta$JavaScript == TRUE & encuesta$Salary < quantil) & encuesta$Ansiedad == TRUE)
 
 # Contar la cantidad de personas que trabajan en JavaScript y ganan menos que el quantil sin ansiedad
+
+
+
+
 JS_NoAnsiedad <- sum((encuesta$JavaScript == TRUE & encuesta$Salary < quantil) & encuesta$Ansiedad == FALSE)
 
 # Contar la cantidad de personas que no trabajan en JavaScript y ganan mas que el quantil con ansiedad
@@ -142,24 +154,19 @@ P_JS <- sum(encuesta$JavaScript == TRUE) / nrow(encuesta)
 P_NoJS <- sum(encuesta$JavaScript == FALSE) / nrow(encuesta)
 P_Ansiedad <- sum(encuesta$Ansiedad == TRUE) / nrow(encuesta)
 P_NoAnsiedad <- sum(encuesta$Ansiedad == FALSE) / nrow(encuesta)
-cat("La probabilidad de que programen en JavaScript es de:", P_JS)
-cat("La probabilidad de que NO programen en JavaScript es de:", P_NoJS)
-cat("La probabilidad de que sufran de ansiedad es de:", P_Ansiedad)
-cat("La probabilidad de que no sufran de ansiedad es de:", P_NoAnsiedad)
+
 
 P_A_given_JS <- JS_Ansiedad / sum(encuesta$JavaScript == TRUE & encuesta$Salary < quantil)
   P_B_given_JS <- JS_Ansiedad / sum((encuesta$JavaScript == TRUE & encuesta$Salary < quantil) & encuesta$Ansiedad == TRUE)
-cat("La probabilidad de que sufran de ansiedad y programen en JS (ganando menos que el cuartil inferior) es de:",P_B_given_JS)
+
 P_A_given_NoJS <- NoJS_Ansiedad / sum(encuesta$JavaScript == FALSE & encuesta$Salary > quantil)
 P_B_given_NoJS <- NoJS_Ansiedad / sum((encuesta$JavaScript == FALSE & encuesta$Salary > quantil) & encuesta$Ansiedad == TRUE)
-cat("La probabilidad de que no sufran de ansiedad y no programen en JS (ganando mas que el cuartil inferior) es de:",P_B_given_JS)
-
 
 
 if (P_A_given_JS == P_Ansiedad && P_B_given_JS == P_Ansiedad) {
-cat("El evento A (Ansiedad) y el evento B (JavaScript) son independientes.\n")
+cat("\nEl evento A (Ansiedad) y el evento B (JavaScript) son independientes.\n")
 } else {
-cat("El evento A (Ansiedad) y el evento B (JavaScript) son dependientes.\n")
+cat("\nEl evento A (Ansiedad) y el evento B (JavaScript) son dependientes.\n")
 }
 
 if (P_A_given_NoJS == P_Ansiedad && P_B_given_NoJS == P_Ansiedad) {
